--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>  
     <title>HTML Redirect</title>  
     <meta http-equiv="refresh"
-        content="0; url = http://rahulkesh.cf" />  
+        content="2; url = HTML5-CSS-JS-Solution/module5-solution/" />  
 </head>  
   
 <body>  
