--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>  
     <title>HTML Redirect</title>  
     <meta http-equiv="refresh"
-        content="2; url = HTML5-CSS-JS-Solution/module5-solution/" />  
+        content="2; url = module5-solution/index.html" />  
 </head>  
   
 <body>  
