--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>  
     <title>HTML Redirect</title>  
     <meta http-equiv="refresh"
-        content="2; url = module5-solution/index.html" />  
+        content="2; url = rahulkesharwani353.github.io/
+HTML5-CSS-JS-Solution/module5-solution/index.html">  
 </head>  
   
 <body>  
